--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 }
 
 .header-image {
-    background-image: url('../images/main2.jpg');
+    background-image: url('../images/main.jpg');
     height: 350px;
     background-position: center;
     background-repeat: no-repeat;
@@ -26,4 +26,20 @@
     background-repeat: no-repeat;
     position: relative;
     background-size: cover;
+}
+
+.user-image {
+    height: 200px;
+    width: 200px;
+    justify-content: center;
+    margin: auto;
+}
+
+.user-image img{
+    height: auto;
+    width: 100%;
+}
+
+.display-right {
+    text-align: right;
 }
