Navbar responsiveness added into the site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,12 +12,28 @@ body {
     font-family: 'Bitter', serif;
 }
 
+.navbar-menu {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: .5rem 1rem;
+}
+
+.navbar-brand {
+    width: 50%;
+}
+
 .navbar-brand p {
     font-size: 12px;
 }
 
-.navbar div{
+.navbar-menu div{
     justify-content: right;
+}
+
+.navbar-toggle {
+    display: none;
 }
 
 .header-nav {
@@ -138,6 +154,21 @@ body {
     width: auto;
 }
 
+.border-review {
+    border-left: solid 2px #eb8e28;
+}
+
+.footer-quote button {
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    border: 2px solid #fff2cc;
+}
+
+.footer-quote {
+    text-align: center;
+}
+
 .footer-list a {
     display: inline-block;
     text-decoration: none;
@@ -177,4 +208,16 @@ body {
 .footer-background {
     height: 200px;
     background-color: #eb8e28;
+}
+
+/*..................................................Media Queries*/
+
+@media(max-width: 992px) {
+    .navbar-toggle {
+        display: block;
+        width: 35%;
+        justify-content: right;
+        text-align: right;
+        float: right;
+    }
 }
