--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,10 @@ body {
     justify-content: right;
 }
 
+.small-toggle {
+    display: none;
+}
+
 .navbar-toggle {
     display: none;
 }
@@ -46,6 +50,11 @@ body {
     color: white;
     border-radius: 5px;
     border: 2px solid #fff2cc;
+}
+
+.small-contact {
+    display: none;
+    text-align: right;
 }
 
 .header-right {
@@ -75,6 +84,10 @@ body {
     background-size: cover;
 }
 
+.small-images {
+    display: none;
+}
+
 .user-image-one {
     background-image: url('../images/man1.jpg');
     height: 200px;
@@ -94,7 +107,6 @@ body {
     background-size: cover;
     border: solid 2px white;
 }
-
 
 .display-right {
     text-align: right;
@@ -129,6 +141,10 @@ body {
     border: solid 2px white;
 }
 
+.service-one:hover {
+    opacity: 0.4;
+}
+
 .service-two {
     background-image: url('../images/service-two.jpg');
     height: 200px;
@@ -139,6 +155,10 @@ body {
     border: solid 2px white;
 }
 
+.service-two:hover {
+    opacity: 0.4;
+}
+
 .service-three {
     background-image: url('../images/service-three.jpg');
     height: 200px;
@@ -147,6 +167,10 @@ body {
     position: relative;
     background-size: cover;
     border: solid 2px white;
+}
+
+.service-three:hover {
+    opacity: 0.4;
 }
 
 .school-logo img{
@@ -206,7 +230,7 @@ body {
 }
 
 .footer-background {
-    height: 200px;
+    height: auto;
     background-color: #eb8e28;
 }
 
@@ -219,5 +243,71 @@ body {
         justify-content: right;
         text-align: right;
         float: right;
+    }
+}
+
+@media(max-width: 743px) {
+    .small-contact {
+        display: block;
+        background-color: #eb8e28;
+    }
+    .big-contact {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .large-images {
+        display: none;
+    }
+    .small-images {
+        display: block;
+    }
+    .footer-socials {
+        justify-content: center;
+        text-align: center;
+        padding-bottom: 5px;
+    }
+    .small-review {
+        display: none;
+    }
+}
+
+@media (max-width: 595px) {
+    .navbar-toggle {
+        width: 30%;
+    }
+}
+
+@media (max-width: 576px) {
+    .small-none {
+        display: none;
+    }
+    .contact-footer {
+        text-align: center;
+    }
+}
+
+@media (max-width: 500px) {
+    .large-toggle {
+        display: none;
+    }
+    .small-toggle {
+        display: block;
+    }
+    .navbar-toggler-small {
+        background-color: white;
+        color: rgba(0,0,0,.5);
+        border: solid 1px rgba(0,0,0,.5);
+        border-radius: 5px;
+    }
+    .header-image {
+        height: 250px;
+    }
+}
+
+@media (max-width: 459px) {
+    .navbar-brand p {
+        font-size: 10px;
     }
 }
