--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Bitter&display=swap');
+@import url("https://fontsforyou.com/fonts/a/Andalus.ttf");
 
 html {
     height: 100%;
 }
 
 .font {
-    font-family: 'Bitter', serif;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#header-title {
+    font-size: 48px;
 }
 
 body {
-    font-family: 'Bitter', serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 .navbar-menu {
@@ -42,14 +46,12 @@ body {
 
 .header-nav {
     display: flex;
-    background-color: #eb8e28;
+    background-color: #364f78;
 }
 
 .header-nav button {
-    background-color: black;
-    color: white;
     border-radius: 5px;
-    border: 2px solid #fff2cc;
+    border: 2px solid black;
 }
 
 .small-contact {
@@ -68,11 +70,12 @@ body {
 }
 
 .header-image {
-    background-image: url('../images/main.jpg');
-    height: 350px;
+    background-image: url('../images/van.jpg');
+    height: 500px;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+    margin-top: 2px;
     background-size: cover;
 }
 
@@ -88,9 +91,23 @@ body {
     display: none;
 }
 
+.images {
+    display: flex;
+}
+
+.whoimages {
+    border: solid 2px white;
+}
+
+.more {
+    border: none;
+    background-color: white;
+    color: red;
+}
+
 .user-image-one {
-    background-image: url('../images/man1.jpg');
-    height: 200px;
+    background-image: url('../images/who.jpg');
+    height: 350px;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
@@ -98,14 +115,12 @@ body {
     border: solid 2px white;
 }
 
-.user-image-two {
-    background-image: url('../images/man2.jpg');
-    height: 200px;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-    background-size: cover;
-    border: solid 2px white;
+#red-subscript {
+    color: red;
+}
+
+.subsize {
+    font-size: 22px;
 }
 
 .display-right {
@@ -114,11 +129,13 @@ body {
 
 .strip {
     height: 20px;
-    background-color: #eb8e28;
+    background-color: #364f78;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
 
 .boiler-image {
-    background-image: url('../images/main2.jpg');
+    background-image: url('../images/mainimage.jpeg');
     height: 200px;
     background-position: center;
     background-repeat: no-repeat;
@@ -133,13 +150,13 @@ body {
 
 .service {
     color: white;
-    background-color: black;
+    background-color: #39414f9e;
     padding: 2px;
-    width: 50%;
+    text-align: center;
 }
 
 #service-one {
-    background-image: url('../images/service-one.jpg');
+    background-image: url('../images/gasapplianceservicing.jpg');
     height: 200px;
     background-position: center;
     background-repeat: no-repeat;
@@ -155,7 +172,7 @@ body {
 }
 
 #service-two {
-    background-image: url('../images/service-two.jpg');
+    background-image: url('../images/statutorytesting.jpg');
     height: 200px;
     background-position: center;
     background-repeat: no-repeat;
@@ -171,16 +188,65 @@ body {
 }
 
 #service-three {
-    background-image: url('../images/service-three.jpg');
+    background-image: url('../images/heatingsystems.jpg');
     height: 200px;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
     background-size: cover;
     border: solid 2px white;
+    padding: 0;
 }
 
 #service-three-text {
+    color: white;
+    display: none;
+}
+
+#service-four {
+    background-image: url('../images/plumbing.jpg');
+    height: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
+    border: solid 2px white;
+    padding: 0;
+}
+
+#service-four-text {
+    color: white;
+    display: none;
+}
+
+#service-five {
+    background-image: url('../images/reactive.jpg');
+    height: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
+    border: solid 2px white;
+    padding: 0;
+}
+
+#service-five-text {
+    color: white;
+    display: none;
+}
+
+#service-six {
+    background-image: url('../images/survey.jpg');
+    height: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
+    border: solid 2px white;
+    padding: 0;
+}
+
+#service-six-text {
     color: white;
     display: none;
 }
@@ -191,14 +257,14 @@ body {
 }
 
 .border-review {
-    border-left: solid 2px #eb8e28;
+    border-left: solid 2px #364f78;
 }
 
 .footer-quote button {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 5px;
-    border: 2px solid #fff2cc;
+    border: 2px solid black;
 }
 
 .footer-quote {
@@ -211,8 +277,11 @@ body {
 }
 
 .footer-list a:hover {
-    font-size: 18px;
     color: white;
+}
+
+.gold {
+    color: #d8d826;
 }
 
 .footer-list li {
@@ -243,7 +312,7 @@ body {
 
 .footer-background {
     height: auto;
-    background-color: #eb8e28;
+    background-color: #364f78;
 }
 
 /*..................................................Media Queries*/
@@ -261,7 +330,6 @@ body {
 @media(max-width: 743px) {
     .small-contact {
         display: block;
-        background-color: #eb8e28;
     }
     .big-contact {
         display: none;
