--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,10 @@ body {
     font-family: 'Times New Roman', Times, serif;
 }
 
+#subheading {
+    font-size: 16px;
+}
+
 .navbar-menu {
     position: relative;
     display: flex;
@@ -63,6 +67,10 @@ body {
 
 .navbar-menu div{
     justify-content: right;
+}
+
+.bg-header {
+    background-color: #ffffff;
 }
 
 .small-toggle {
@@ -84,8 +92,8 @@ body {
 }
 
 .contact {
-    background-color: red;
-    color: white;
+    background-color: white;
+    color: black;
 }
 
 .header-right {
@@ -104,7 +112,7 @@ body {
 }
 
 .header-image-2 {
-    background-image: url('../images/main2.jpeg');
+    background-image: url('../images/main2.webp');
     height: 300px;
     background-position: center;
     background-repeat: no-repeat;
@@ -144,7 +152,7 @@ body {
 .more {
     border: none;
     background-color: white;
-    color: red;
+    color: #cb0000;
 }
 
 .user-image-one {
@@ -158,7 +166,7 @@ body {
 }
 
 #red-subscript {
-    color: red;
+    color: #cb0000;
 }
 
 #email a:hover {
@@ -189,6 +197,7 @@ body {
     background-color: #39414f9e;
     padding: 2px;
     text-align: center;
+    font-size: 22px;
     font-family: 'Times New Roman', Times, serif;
 }
 
